# next-26-keynotes

./: README.md
devkey/: README.md
devkey/debugging-agents/: OWNERS  README.md  pyproject.toml  sample.env
devkey/debugging-agents/simulator_agent/: __init__.py  agent.py  config.py  prompts.py  schemas.py  tools.py
devkey/debugging-agents/simulator_agent/skills/review-marathon-plan/: SKILL.md
devkey/demo-2/: .env.example  .gcloudignore  .gitignore  Makefile  README.md  cloudbuild.yaml  pyproject.toml
devkey/demo-2/demo/: README.md  scenarios.py  test_endpoints.py
devkey/demo-2/demo/deploy/: main.tf  terraform.tfvars.example  variables.tf
devkey/demo-2/src/: __init__.py  config.py  schemas.py
devkey/demo-2/src/_agent_template/: README.md  __init__.py
devkey/demo-2/src/_agent_template/core/: __init__.py  agent.py  config.py  prompts.py  schemas.py  tools.py
devkey/demo-2/src/_agent_template/runtime/: agent_card.py  agent_executor.py  deploy.py  local_server.py  test_client.py
devkey/demo-2/src/_agent_template/services/: memory_manager.py
devkey/demo-2/src/planner_agent/: Dockerfile  __init__.py  main.py
devkey/demo-2/src/planner_agent/core/: __init__.py  agent.py  config.py  planner-instruction.md  prompts.py  schemas.py  tools.py
devkey/demo-2/src/planner_agent/evaluator/: __init__.py  agent.py  instruction.md  prompts.py  schemas.py  tools.py
devkey/demo-2/src/planner_agent/runtime/: __init__.py  agent_card.py  agent_executor.py  deploy.py  local_server.py  test_client.py
devkey/demo-2/src/simulator_agent/: __init__.py
devkey/demo-2/src/utils/: __init__.py  delete_agents.py
devkey/demo-2/terraform/: main.tf  orchestrator_agent.tf  terraform.tfvars.example
devkey/demo-2/tests/: __init__.py  test_evaluator_agent.py  test_orchestrator_agent.py  test_planner_agent.py  test_planner_optimization.py  test_simulator_agent.py
devkey/enhancing-agents-with-memory/: .env.example  .gitignore  README.md  pyproject.toml
devkey/enhancing-agents-with-memory/planner_agent/: agent.py  tools.py
devkey/enhancing-agents-with-memory/spark-setup/: run_dataproc.sh  spark_alloydb_processor.py
devkey/enhancing-agents-with-memory/utils/: setup_agent_engine.py
(+107 files in other folders)
